--- a/web/package.json
+++ b/web/package.json
@@ -10,13 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.0",
-    "@vueuse/core": "^10.7.0"
+    "@vueuse/core": "^10.7.0",
+    "lucide-vue-next": "^0.548.0",
+    "vue": "^3.4.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.0",
-    "vite": "^5.0.0",
     "typescript": "^5.3.0",
+    "vite": "^5.0.0",
     "vue-tsc": "^1.8.27"
   }
 }
