Fix go:embed directive by adding .gitkeep to pkg/web/dist
- Added pkg/web/dist/.gitkeep as placeholder file
- Updated .gitignore to allow .gitkeep while ignoring other dist files
- Fixes 'pattern dist: no matching files found' error when using go install

--- a/.gitignore
+++ b/.gitignore
@@ -239,3 +239,6 @@ go.work.sum
 # Frontend
 web/node_modules/
 web/dist/
+
+# Allow .gitkeep in pkg/web/dist to satisfy go:embed directive
+!pkg/web/dist/.gitkeep
