Fix go:embed with placeholder.txt instead of .gitkeep
- Replaced .gitkeep with placeholder.txt (go:embed excludes dot files)
- Updated .gitignore to allow placeholder.txt
- Fixes 'cannot embed directory dist: contains no embeddable files' error

--- a/.gitignore
+++ b/.gitignore
@@ -240,5 +240,5 @@ go.work.sum
 web/node_modules/
 web/dist/
 
-# Allow .gitkeep in pkg/web/dist to satisfy go:embed directive
-!pkg/web/dist/.gitkeep
+# Allow placeholder.txt in pkg/web/dist to satisfy go:embed directive
+!pkg/web/dist/placeholder.txt
